--- a/wp-content/themes/themedebase/style.css
+++ b/wp-content/themes/themedebase/style.css
@@ -6,12 +6,9 @@ Description: Thème de base pour apprendre à faire un site Wordpress.
 Version: 1.0
 -------------------------------------------------------------- */
 
-@charset "UTF-8";
-
 body {
   font-family: "Roboto", thin;
 }
-
 * {
   box-sizing: border-box;
 }
@@ -53,10 +50,17 @@ body {
   font-family: "Ruda", SemiBold;
 }
 
-h1 {
-  font-family: "Roboto", Medium;
-  font-size: 24px;
-  cursor: default;
+.title-1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  margin-top: 25px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 40px;
+  color: white;
 }
 
 h2 {
@@ -73,18 +77,161 @@ article {
   margin-bottom: 20px;
 }
 
-.heros__boite-description {
+main {
+  width: 100%;
+}
+
+.contraste-div {
+  z-index: 1;
+  position: absolute;
+  width: 100%;
+  height: 85%;
+  background-color: rgba(239, 164, 139, 0.5);
+  opacity: 20%;
+}
+
+.slogan {
   overflow: hidden;
   text-overflow: ellipsis;
-  padding: 30px;
-  margin-top: 60px;
-  height: 400px;
-  border: 1px solid #efa48b;
+  padding: 20px;
   border-radius: 20px;
   text-align: center;
   height: 100%;
+  width: 70%;
+  margin: 0 auto;
+  color: #fff;
+  font-family: "Ruda", SemiBold;
+  z-index: 2;
 }
 
+.slogan h1 {
+  color: #fff;
+  text-shadow: 3px 3px 3px #000;
+}
+
+.slogan .description {
+  margin-top: 30px;
+  font-size: 25px;
+  text-shadow: 3px 3px 3px #000;
+}
+
+/*Carousel*/
+.mySwiper {
+  width: 100%;
+  overflow: hidden;
+}
+
+.swiper-slide img {
+  width: 100vw;
+  height: 85vh;
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: 0% 70%;
+  object-position: 0% 70%;
+}
+
+.heros {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background-image: url("medias/icones/rectangle_backg.png");
+  border-bottom: 1px solid #efa48b;
+}
+
+.heros .container {
+  position: absolute;
+}
+
+.section__nouvelles.accueil__title {
+  margin-top: 60px;
+  font-size: 30px;
+  font-family: "Roboto", thin;
+  width: 100%;
+  text-align: center;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.section__nouvelles.accueil {
+  margin-top: 40px;
+}
+
+.section__temoignages {
+  margin-top: 200px;
+  text-align: center;
+  margin-bottom: 100px;
+}
+.accueil__temoignages {
+  padding: 20px;
+  border: 1px solid #fcc8b2;
+  border-radius: 20px;
+}
+.accueil__temoignages__nom {
+  font-family: "Roboto", Medium;
+  font-size: 30px;
+  padding: 20px;
+}
+
+.section__temoignages__titre {
+  margin-top: 60px;
+  font-size: 30px;
+  font-family: "Roboto", thin;
+  width: 100%;
+  text-align: center;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.accueil__temoignages__text {
+  font-size: 18px;
+}
+
+.swiper-slide.temoignage {
+  width: 100%;
+  height: 150px;
+  margin-top: 20px;
+  margin-left: 5px;
+}
+
+.hero__nouvelles {
+  position: relative;
+  margin: 0px;
+  width: 100%;
+}
+
+.imgLandscape,
+.imgPortrait {
+  width: 100%;
+  height: 100%;
+}
+
+.imgPortrait {
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: 0% 100%;
+  object-position: 0% 100%;
+}
+
+.imgLandscape {
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: 0% 100%;
+  object-position: 0% 100%;
+}
+
+/*.contraste {
+   @include nouvelles.contraste;
+}
+.accueilContraste {
+   @include nouvelles.accueilContraste;
+   background-color: variables.$peche;
+}*/
+@media (orientation: landscape) {
+  .hero__nouvelles {
+    height: 100vh !important;
+  }
+}
 main .row {
   display: flex;
   flex-wrap: nowrap;
@@ -122,17 +269,6 @@ main .row {
   transition: transform 0.5s;
 }
 
-/*Carousel*/
-.swiper {
-  width: 50%;
-}
-
-.swiper-slide img {
-  width: 100%;
-  -o-object-fit: contain;
-  object-fit: contain;
-}
-
 /* Menu hamburger*/
 @media screen and (max-width: 992px) {
   .menu-header {
@@ -164,33 +300,102 @@ main .row {
     width: 100%;
   }
 }
+.Apropos {
+  width: 70%;
+  text-align: justify;
+  margin: auto;
+  margin-top: 10%;
+  margin-bottom: 5%;
+  border-radius: 20px;
+  border: 2px solid #fcc8b2;
+}
+
+.Apropos:hover {
+  transform: scale(0.9);
+  transition: transform 0.5s;
+}
+
+.texteA {
+  width: 70%;
+  text-align: justify;
+  margin: auto;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+.Histoire {
+  width: 70%;
+  text-align: justify;
+  margin: auto;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  border-radius: 20px;
+  border: 2px solid #fcc8b2;
+}
+
+.Histoire:hover {
+  transform: scale(0.9);
+  transition: transform 0.5s;
+}
+
+.texteH {
+  width: 70%;
+  text-align: justify;
+  margin: auto;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+.title-a {
+  margin: 0px auto;
+  margin-top: 25px;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  font-weight: bold;
+  font-size: 40px;
+}
+
+.titrea {
+  text-align: center;
+  margin-top: 16px;
+}
+
+.titreh {
+  text-align: center;
+  margin-top: 16px;
+}
+
 .contact__main .row {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
 }
-.contact__main .section__membres {
+
+.section__membres {
   margin-top: 150px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.contact__main .section__membres .membres__cartes {
+.section__membres .membres__cartes {
   display: flex;
   justify-content: space-evenly;
   width: 1000px;
 }
-.contact__main .section__membres .membre__titre {
+.section__membres .membre__titre {
   text-align: center;
-  text-decoration: underline;
   font-size: 25px;
   margin-bottom: 25px;
 }
 .section__membres .membre__card {
-  margin-bottom: 30px;
+  width: 100%;
+  height: 100%;
+  max-height: 400px;
+  margin-bottom: 200px;
   border: none;
 }
-.contact__main .section__membres .membre__img {
+.section__membres .membre__img {
   width: 100%;
   height: 100%;
   max-width: 400px;
@@ -198,7 +403,11 @@ main .row {
   border-radius: 20px;
   border: 2px solid #fcc8b2;
 }
-.contact__main .section__membres .membre__text {
+.section__membres .membre__img:hover {
+  transition: 0.5s;
+  transform: scale(0.9);
+}
+.section__membres .membre__text {
   margin: 0 auto;
   width: 100%;
   height: 100%;
@@ -207,11 +416,16 @@ main .row {
   text-align: center;
   border-radius: 5px 5px 5px 5px;
   background-color: #fcc8b2;
+  transition: transform 0.5s;
 }
-.contact__main .section__membres .membre__role {
+.section__membres .membre__text:hover {
+  transition: 0.5s;
+  transform: scale(0.9);
+}
+.section__membres .membre__role {
   padding: 10px 0px;
 }
-.contact__main .section__membres .membre__nom {
+.section__membres .membre__nom {
   padding: 10px 0px;
 }
 
@@ -221,12 +435,18 @@ main .row {
       height: 500px;
    }
 }*/
+.imgPortraitContain {
+  -o-object-fit: contain;
+  object-fit: contain;
+  width: 100%;
+}
+
 .entete__sous-menu {
   border-width: 2px;
   text-decoration: none;
   margin-right: 20px;
   margin-left: 20px;
-  height: 70px;
+  height: 60px;
   margin-top: 25%;
 }
 
@@ -237,16 +457,11 @@ main .row {
     grid-template-rows: auto;
     margin-left: 10%;
     margin-right: 10%;
-    margin-top: 5%;
+    margin-top: 2%;
     align-items: center;
     text-align: center;
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto;
-    margin-left: 20%;
-    margin-top: 5%;
-    align-items: center;
-    text-align: center;
+    -o-object-fit: contain;
+    object-fit: contain;
   }
   .imageConsole {
     display: block;
@@ -255,7 +470,7 @@ main .row {
     border-color: #fff !important;
     margin-left: 20px;
     position: absolute !important;
-    transform: translate3d(60%, 175%, 0px) !important;
+    transform: translate3d(55%, 120%, 0px) !important;
     flex-wrap: wrap;
     color: #fcc8b2;
     margin-left: 30px !important;
@@ -270,12 +485,11 @@ main .row {
   .imageConsole {
     display: block;
     align-items: center;
-    text-align: center;
     width: 60%;
     border-color: #fff !important;
     margin-left: 20px;
     position: absolute !important;
-    transform: translate3d(60%, 160%, 0px) !important;
+    transform: translate3d(55%, 90%, 0px) !important;
     flex-wrap: wrap;
     color: #fcc8b2;
     margin-left: 30px !important;
@@ -290,29 +504,30 @@ main .row {
     grid-template-rows: auto;
     margin-left: 10%;
     margin-right: 10%;
-    margin-top: 5%;
+    margin-top: 2%;
     align-items: center;
     text-align: center;
-  }
-}
-@media screen and (max-width: 600px) {
-  .icon p {
-    text-align: center;
-    color: #fcc8b2;
-    font-size: 18px;
-    width: 100%;
     -o-object-fit: contain;
     object-fit: contain;
+  }
+  .enteteIcon a {
+    list-style-type: none;
+    background-color: #efa48b;
+    box-shadow: #efa48b;
+    display: block;
+    text-align: center;
+    padding: 10px;
+    padding-top: 17px;
+    width: 50% !important;
   }
   .imageConsole {
     display: block;
     align-items: center;
-    text-align: center;
     width: 60%;
     border-color: #fff !important;
     margin-left: 20px;
     position: absolute !important;
-    transform: translate3d(60%, 160%, 0px) !important;
+    transform: translate3d(55%, 90%, 0px) !important;
     flex-wrap: wrap;
     color: #fcc8b2;
     margin-left: 30px !important;
@@ -320,8 +535,35 @@ main .row {
     object-fit: contain !important;
   }
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 600px) {
+  .icon p {
+    text-align: center;
+    color: #fcc8b2;
+    font-size: 18px;
+    -o-object-fit: contain;
+    object-fit: contain;
+  }
   .enteteIcon {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 2%;
+    align-items: center;
+    text-align: center;
+    -o-object-fit: contain;
+    object-fit: contain;
+  }
+  .enteteIcon a {
+    list-style-type: none;
+    background-color: #efa48b;
+    box-shadow: #efa48b;
+    display: block;
+    text-align: center;
+    padding: 10px;
+    padding-top: 17px;
+    width: 50% !important;
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: auto;
@@ -335,24 +577,55 @@ main .row {
     border-color: #fff !important;
     margin-left: 20px;
     position: absolute !important;
-    transform: translate3d(60%, 160%, 0px) !important;
-    flex-wrap: wrap;
+    transform: translate3d(0%, 90%, 0px) !important;
     color: #fcc8b2;
     margin-left: 30px !important;
     -o-object-fit: contain !important;
     object-fit: contain !important;
   }
 }
-.enteteIcon a {
-  list-style-type: none;
-  background-color: #efa48b;
-  box-shadow: #efa48b;
-  display: block;
-  text-align: center;
-  padding: 0px;
-  width: 50% !important;
+@media screen and (max-width: 375px) {
+  .enteteIcon {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 2%;
+    align-items: center;
+    text-align: center;
+    -o-object-fit: contain;
+    object-fit: contain;
+  }
+  .enteteIcon a {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 2%;
+    align-items: center;
+    text-align: center;
+    -o-object-fit: contain;
+    object-fit: contain;
+    width: 90% !important;
+    font-size: 12px !important;
+  }
+  .imageConsole {
+    display: block;
+    align-items: center;
+    text-align: center;
+    width: 60%;
+    border-color: #fff !important;
+    margin-left: 20px;
+    position: absolute !important;
+    transform: translate3d(0%, 90%, 0px) !important;
+    color: #fcc8b2;
+    margin-left: 30px !important;
+    -o-object-fit: contain !important;
+    object-fit: contain !important;
+  }
 }
-
 .enteteIcon a:hover {
   color: black !important;
   list-style-type: none;
@@ -360,9 +633,10 @@ main .row {
 }
 
 .deroulant {
-  background-color: #fcc8b2 !important;
-  border-color: #fcc8b2 !important;
+  background-color: #fff !important;
+  border-color: #fff !important;
   width: 90% !important;
+  color: #000 !important;
 }
 
 .sm {
@@ -396,6 +670,14 @@ ul {
   margin-left: 2%;
 }
 
+.icon:hover {
+  width: 10%;
+  display: inline-block;
+  margin-left: 2%;
+  transform: scale(0.8) !important;
+  transition: transform 0.7s;
+}
+
 @media screen and (min-width: 900px) {
   .icon p {
     text-align: center;
@@ -411,7 +693,6 @@ ul {
     text-align: center;
     color: #fcc8b2;
     font-size: 18px;
-    width: 100%;
     -o-object-fit: contain;
     object-fit: contain;
   }
@@ -439,13 +720,15 @@ ul {
   grid-template-columns: repeat(auto-fit, 300px);
   grid-template-rows: repeat(auto-fit);
   gap: 50px;
-  margin-left: 10%;
+  justify-content: center;
   align-items: center;
 }
 
 .item {
+  position: relative;
   margin-top: 50px;
-  width: 100%;
+  width: 300px;
+  height: 438px;
   display: inline-block;
   padding: 20px;
 }
@@ -462,7 +745,8 @@ ul {
   transition: transform 0.5s;
 }
 
-.lienItemP {
+.lienItemP,
+.lienItem {
   text-decoration: none;
 }
 
@@ -514,7 +798,7 @@ ul {
   text-align: center;
   text-decoration: underline;
   font-size: 25px;
-  margin-bottom: 25px;
+  margin-bottom: 90px;
   font-family: "Roboto", Medium;
 }
 .contact__main .section__contact .contact__form {
@@ -545,8 +829,8 @@ ul {
   align-items: center;
   width: 100%;
   /*& ::placeholder {
-     text-align: center;
-  }*/
+         text-align: center;
+      }*/
 }
 .contact__main .section__contact .contact__form .form__nom input,
 .contact__main .section__contact .contact__form .form__prenom input,
@@ -579,12 +863,117 @@ ul {
 }
 .contact__main .section__contact .contact__form .btn__envoyer:hover {
   background-color: #efa48b;
-  text-decoration: underline;
 }
 
-/*.contact__form:placeholder {
-   @include contact.placeholder;
+.hero__nouvelles {
+  height: 70%;
+}
+
+/*.accueilContraste {
+  @include nouvelles.accueilContraste;
+  background-color: variables.$pecheopacity;
+}
+
+.contraste {
+  @include nouvelles.contraste;
 }*/
+.section__nouvelles {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 300px);
+  grid-template-rows: repeat(auto-fit);
+  gap: 50px;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+.section__nouvelles .item__nouvelle {
+  position: relative;
+  margin-top: 50px;
+  width: 300px;
+  height: 100%;
+  display: inline-block;
+  transition: transform 0.5s;
+}
+.section__nouvelles .item__nouvelle .lienItem__nouvelle {
+  text-decoration: none;
+}
+.section__nouvelles .item__nouvelle .lienItem__nouvelle .imgItem__nouvelle {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  margin: auto;
+  border-radius: 20px;
+  overflow: hidden;
+  border: 2px solid #fcc8b2;
+  transition: transform 0.5s;
+}
+.section__nouvelles .item__nouvelle .lienItemP__nouvelle {
+  text-decoration: none;
+  /*
+  .item__nouvelle:first-child {
+    @include nouvelles.itemPNouvelle01;
+    color: variables.$blanc;
+    background-color: none;
+
+    .titre__nouvelle {
+      @include nouvelles.titreNouvelle;
+    }
+  }*/
+}
+.section__nouvelles .item__nouvelle .lienItemP__nouvelle .itemP__nouvelle {
+  z-index: 1;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  border-radius: 20px;
+  font-size: 18px;
+  color: #fff;
+  background-color: rgba(239, 164, 139, 0.5);
+}
+.section__nouvelles
+  .item__nouvelle
+  .lienItemP__nouvelle
+  .itemP__nouvelle
+  .titre__nouvelle {
+  padding: 0px 15px;
+}
+
+.itemP__nouvelle p,
+.itemP__nouvelle__01 p {
+  cursor: pointer;
+  position: relative;
+  top: 35%;
+}
+
+.item__nouvelle:hover {
+  transform: scale(1.1);
+  transition: transform 0.5s;
+}
+
+.btnNouvelles {
+  display: flex;
+  text-decoration: none;
+  padding: 5px 25px;
+  border-radius: 20px;
+  font-size: 20px;
+  border: none;
+  margin: 0px auto;
+  margin-bottom: 25px;
+  background-color: #fcc8b2;
+  transition: transform 0.5s;
+}
+
+.btnNouvelles:hover {
+  background-color: #efa48b;
+  border: solid 2px #fcc8b2;
+  transform: scale(1.1);
+  transition: transform 0.5s;
+}
+/*footer*/
 footer {
   display: flex;
   align-items: center;
@@ -689,8 +1078,9 @@ a {
   background-color: #efa48b;
   height: 700px;
   display: flex;
-  flex-direction: column;
+  align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 .erreur404__titre {
@@ -700,6 +1090,40 @@ a {
 
 .erreur404__titre2 {
   font-size: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .erreur404__titre {
+    font-size: 100px;
+  }
+}
+@media screen and (min-width: 576px) {
+  .erreur404__titre {
+    font-size: 50px;
+  }
+}
+.maps__carte {
+  margin-bottom: 100px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.maps__titre-carte {
+  text-align: center;
+}
+
+.maps__titre2-carte {
+  text-align: center;
+}
+
+.maps__titre3-carte {
+  text-align: center;
+}
+
+.maps__titre1-carte {
+  text-align: center;
 }
 
 /* single product */
@@ -738,5 +1162,4 @@ a {
   padding: 10px;
   border-radius: 20px;
 }
-
 /*# sourceMappingURL=main.css.map */
